# apertium-kaz-kir

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-kaz-kir.kaz-kir.dix  apertium-kaz-kir.kaz-kir.lrx  apertium-kaz-kir.kaz-kir.lsx  apertium-kaz-kir.kaz-kir.rlx  apertium-kaz-kir.kaz-kir.rtx  apertium-kaz-kir.kaz-kir.t1x  apertium-kaz-kir.kaz-kir.t2x  apertium-kaz-kir.kaz.lexc  apertium-kaz-kir.kir-kaz.lrx  apertium-kaz-kir.kir-kaz.lsx  apertium-kaz-kir.kir-kaz.t1x  apertium-kaz-kir.kir-kaz.t2x  apertium-kaz-kir.kir.lexc  configure.ac  copystuffover.sh  modes.xml  pending-tests.sh  regression-tests.sh  test.txt  testcorpus_kaz-kir.sh  update-morphs.bash  wiki-tests.sh
dev/: bidix-sanity.sh  countstems.sh  countstemsdix.sh  extract-same-entries.sh  find-adj-incons.py  kaz-countstems.sh  kir-countstems.sh  lexical_selection_rules_needed.txt  test-prefix.sh
dev/testvoc/: inconsistency-summary.sh  inconsistency.sh  testvoc-summary.kaz-kir.txt  testvoc.sh
test/: kaz-kir-autoseq-expected.txt  kaz-kir-biltrans-expected.txt  kaz-kir-generator-expected.txt  kaz-kir-input.txt  kaz-kir-morph-expected.txt  kaz-kir-postgen-gold.txt  kaz-kir-revautoseq-expected.txt  kir-kaz-biltrans-expected.txt  kir-kaz-generator-expected.txt  kir-kaz-input.txt  kir-kaz-morph-expected.txt  kir-kaz-pending-biltrans-expected.txt  kir-kaz-pending-disam-expected.txt  kir-kaz-pending-generator-expected.txt  kir-kaz-pending-input.txt  kir-kaz-pending-morph-expected.txt  kir-kaz-pending-postgen-gold.txt  kir-kaz-pending-pretransfer-expected.txt  kir-kaz-pending-revautoseq-expected.txt  kir-kaz-postgen-gold.txt  kir-kaz-pretransfer-expected.txt  kir-kaz-revautoseq-expected.txt  tests.json
testvoc/lite/: README  testvoc-summary.kaz-kaa.txt  testvoc-summary.kaz-kir.txt  testvoc.sh
testvoc/standard/: inconsistency.sh  testvoc.sh
texts/: MANIFEST  azattyq_24455849.kaz-kir-postedited.txt  azattyq_24455849.kaz-kir.txt  azattyq_24455849.kaz.txt  azattyq_24455849.kir.txt  azattyq_24455849.txt  azattyq_25051112.kaz.txt  azattyq_25052769.txt  brazil.kaz.txt  brazil.kir.txt  dert.kaz.txt  dert.kir.txt  diff.sh  eval.sh  ho_chi_minh.kaz.txt  ho_chi_minh.kir.txt  kazakh_adebieti.kaz.txt  kazakh_adebieti.kir.txt  kazakhadebieti_6599.kaz-kir-postedited.txt  kazakhadebieti_6599.kaz-kir.txt  kazakhadebieti_6599.kaz.txt  kazakhadebieti_6599.kir.txt  kazakhadebieti_6599.txt  kazakhadebieti_6606.kaz-kir-postedited.txt  kazakhadebieti_6606.kaz-kir.txt  kazakhadebieti_6606.kaz.txt  kazakhadebieti_6606.kir.txt  kazakhadebieti_6606.txt  misc_sentences.kaz.txt  misc_sentences.kir.txt  sauytty_poezd.kaz.txt  sauytty_poezd.kir.txt  spektr.kaz.txt  spektr.kir.txt  story.eval.sh  story.kaz-kir-postedited.2.txt  story.kaz-kir-postedited.txt  story.kaz-kir.2.txt  story.kaz-kir.txt  story.kaz.2.txt  (+11 more)
